[package]
name = "deno_json_op"
authors = ["Elias Sjögreen"]
description = "A macro for easing the development of deno plugins"
license = "MIT"
repository = "https://github.com/denosaurs/deno_json_op"
version = "0.1.0"
edition = "2018"
exclude = ["example"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = [ "full" ] }
